Fix grid-container mixin, remove align-x, align-y from grid configuration

--- a/core/brigrid/_settings.scss
+++ b/core/brigrid/_settings.scss
@@ -2,8 +2,6 @@ $_default-grid-settings: ( // don't change this map!
     driver: flex,
     columns: 12,
     gutter: 30px,
-    align-x: start,
-    align-y: start,
     reversed: false,
     collapse: false,
     breakpoints: (
